@@ -1,0 +1,16 @@
+/* *********************************************
+ * ANDOR
+ * 
+ * USE - EDUCATIONAL PURPOSES ONLY
+ *
+ * COPYRIGHT @ 2014
+ **********************************************/
+
+package org.andor.core.input;
+
+public interface KeyboardShortcutListener {
+	
+	/* The method called when a keyboard shortcut has been completed */
+	public void onShortcut(KeyboardShortcut e);
+	
+}
