@@ -42,12 +42,13 @@ public class GUITextBoxSelection extends Object2D {
 			//Catch any errors
 			try {
 				if (this.textBox.selectionIndexStart < this.textBox.selectionIndexEnd)
-					selectionX = p.x + this.textBox.renderer.font.getWidth(this.textBox.renderText.substring(this.textBox.selectionIndexEnd - this.textBox.viewIndexStart));
+					selectionX = p.x + this.textBox.renderer.font.getWidth(this.textBox.renderText.substring(0, this.textBox.selectionIndexStart - this.textBox.viewIndexStart));
 				else
 					selectionX = p.x + this.textBox.renderer.font.getWidth(this.textBox.renderText.substring(0, this.textBox.selectionIndexEnd - this.textBox.viewIndexStart));
 			} catch (StringIndexOutOfBoundsException e) {
 				
 			}
+			System.out.println(selectionX);
 			float selectionY = p.y;
 			float selectionWidth = this.textBox.renderer.font.getWidth(this.textBox.getRenderTextSelection());
 			float selectionHeight = this.textBox.height;
