@@ -1,4 +1,16 @@
 ------------------------------------------------------
+Release 1 | Beta 0 | Development 0 | Experimental 4
+
+* Added KeyboardShortcut
+* Added KeyboardShortcuts
+* Added KeyboardShortcutListener
+
+* Added the methods in ArrayUtils to change int[] to
+  List<Integer> and vice versa
+  
+* Fixed bug: Selection didn't work properly
+
+------------------------------------------------------
 Release 1 | Beta 0 | Development 0 | Experimental 3
 
 * Fixed bug: GUITextBox backspace would sometimes
